--- a/pages/index.css
+++ b/pages/index.css
@@ -5,5 +5,8 @@
   max-width: 1600px;
   min-width: 1100px;
   margin: 0 auto;
-  /*font-family: Arial, sans-serif;*/
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  /*font-family: 'Noto Serif', 'Times New Roman', serif;*/
 }
