--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,9 @@
 /* ==========================================================================
    PAGE BLOCK
    ========================================================================== */
+* {
+  scroll-behavior: smooth;
+}
 .page {
   max-width: 1600px;
   min-width: 1100px;
@@ -8,5 +11,134 @@
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+
   /*font-family: 'Noto Serif', 'Times New Roman', serif;*/
+}
+/* ==========================================================================
+   HEADER BLOCK
+   ========================================================================== */
+
+.header {
+  background-image: url("../images/background_header.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  position: relative;
+}
+.header__content {
+  min-height: 607px; /* igual ou maior que a altura da imagem */
+  margin: 0 0 0 80px;
+}
+.header__title {
+  max-width: 709px;
+  margin: 183px 0 28px;
+
+  /*margin: 183px 0 0 80px;*/
+  /*margin-top: 183px;
+  margin-left: 80px;*/
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
+}
+.header__span-accent {
+  display: block;
+  font-family: "Noto Serif";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 72px;
+  color: #2f80ed;
+}
+.header__description {
+  max-width: 683px;
+  margin: 0;
+  /*margin-top: 28px;*/
+  /*margin-left: 80px;*/
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+.header__description-span {
+  display: block;
+}
+.header__image {
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+}
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 80px 40px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
+}
+
+.header__footer-right {
+  display: flex;
+  align-items: flex-end;
+}
+.header__paragraph {
+  margin: 0;
+}
+/* ==========================================================================
+   NAV BLOCK
+   ========================================================================== */
+.nav {
+  display: flex;
+  justify-content: space-between;
+  /*display: flex;
+  justify-content: space-between;
+  height: 80px;*/
+}
+.nav__logo {
+  position: relative;
+  left: 30px;
+  top: 30px;
+  width: 105px;
+  height: 39px;
+  /*width: 58px;
+  height: 80px;
+  margin: 0;
+  padding: 0;*/
+}
+
+.nav__links {
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+  margin-right: 80px;
+  /*display: flex;
+  list-style-type: none;
+  margin: 8px 0 0;
+  padding: 0;
+  gap: 20px;*/
+}
+
+.nav__link {
+  text-decoration: none;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: black;
 }
