--- a/pages/index.css
+++ b/pages/index.css
@@ -124,13 +124,18 @@
   list-style-type: none;
   display: flex;
   gap: 20px;
-  margin-top: 30px;
-  margin-right: 80px;
+  margin: 30px 80px 0 0;
+  padding: 0;
+  /*margin-top: 30px;
+  margin-right: 80px;*/
   /*display: flex;
   list-style-type: none;
   margin: 8px 0 0;
   padding: 0;
   gap: 20px;*/
+}
+.nav__links:nth-child(1) {
+  margin-left: 20px;
 }
 
 .nav__link {
@@ -141,4 +146,65 @@
   font-size: 16px;
   line-height: 20px;
   color: black;
+}
+/* ==========================================================================
+  RECIPES BLOCK
+   ========================================================================== */
+.recipes {
+  background-image: url("../images/background_recipes.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #0a2750;
+  background-position: center;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+
+  /*display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  position: relative;*/
+}
+.recipes__title {
+  max-width: 580px;
+  margin: 100px 0 0 80px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+.recipes__subtitle {
+  max-width: 438px;
+  margin: 24px 0 0 80px;
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+.recipes__videos {
+  margin: auto;
+  margin-top: 80px;
+  margin-bottom: 215px;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+.recipes__video-item {
+}
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+}
+.recipes__video-caption {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+}
+.recipes__paragraph {
+  margin: 0;
 }
