--- a/pages/index.css
+++ b/pages/index.css
@@ -215,3 +215,110 @@
 .recipes__paragraph {
   margin: 0;
 }
+/* ==========================================================================
+  RESERVATION BLOCK
+   ========================================================================== */
+.reservation {
+  background-image: url("../images/background_reservation.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #d9e7ff;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  padding: 100px 0px 120px;
+  /*color: #fff;
+  display: flex;
+  flex-direction: column;*/
+
+  /*display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  position: relative;*/
+}
+.reservation__title {
+  display: flex;
+  justify-content: center;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+.reservation__form {
+  margin: 0 auto;
+}
+.form__section {
+  display: flex;
+  justify-content: center;
+  max-width: 385px;
+}
+.form__fieldset {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+}
+
+.form__label {
+  margin: 0;
+  padding: 0;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__input {
+  box-sizing: border-box; /* garante que padding e borda sejam incluídos no cálculo da largura */
+  width: 100%; /* ocupa toda a largura disponível */
+  height: 60px;
+  margin: 8px 0 32px;
+  padding: 15px 20px;
+
+  border-radius: 4px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+.form__input::placeholder {
+  color: #838383; /* cor desejada */
+}
+.form__button-submit {
+  height: 60px;
+  max-width: 385px;
+  width: 100%;
+  margin-bottom: 32px;
+  border-radius: 4px;
+  background: #2f80ed;
+  color: white;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+.form__button-submit:hover {
+  opacity: 0.7;
+}
+.form__checkbox {
+  display: flex;
+  justify-content: center;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+.form__checkbox-icon {
+  margin-right: 12px;
+  height: 20px;
+  width: 20px;
+}
