--- a/pages/index.css
+++ b/pages/index.css
@@ -252,7 +252,7 @@
 .reservation__form {
   margin: 0 auto;
 }
-.form__section {
+.form {
   display: flex;
   justify-content: center;
   max-width: 385px;
@@ -267,7 +267,7 @@
 .form__label {
   margin: 0;
   padding: 0;
-  font-family: Inter;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -280,9 +280,9 @@
   height: 60px;
   margin: 8px 0 32px;
   padding: 15px 20px;
-
+  border-color: #838383;
   border-radius: 4px;
-  font-family: Inter;
+  font-family: "Inter";
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -311,7 +311,7 @@
 .form__checkbox {
   display: flex;
   justify-content: center;
-  font-family: Inter;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
