--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,16 @@
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
+
 /* ==========================================================================
    PAGE BLOCK
    ========================================================================== */
+/*
 * {
   scroll-behavior: smooth;
 }
@@ -11,13 +21,11 @@
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
-
-  /*font-family: 'Noto Serif', 'Times New Roman', serif;*/
-}
+}*/
 /* ==========================================================================
    HEADER BLOCK
    ========================================================================== */
-
+/*
 .header {
   background-image: url("../images/background_header.svg");
   background-repeat: no-repeat;
@@ -31,16 +39,14 @@
   max-height: 800px;
   position: relative;
 }
+*/
+/*
 .header__content {
-  /*min-height: 607px; /* igual ou maior que a altura da imagem */
-  /*margin: 0 0 0 80px;*/
 }
+*/
+/*
 .header__title {
   max-width: 709px;
-  /*margin: 183px 0 28px 80px;*/
-  /*margin: 183px 0 0 80px;*/
-  /*margin-top: 183px;
-  margin-left: 80px;*/
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
@@ -61,11 +67,11 @@
   line-height: 72px;
   color: #2f80ed;
 }
+*/
+/*
 .header__description {
   max-width: 683px;
   margin: 0;
-  /*margin-top: 28px;*/
-  /*margin-left: 80px;*/
   font-family: "Noto Serif";
   font-style: normal;
   font-weight: normal;
@@ -97,7 +103,6 @@
   line-height: 20px;
   color: #838383;
 }
-
 .header__footer-right {
   display: flex;
   align-items: flex-end;
@@ -105,15 +110,14 @@
 .header__paragraph {
   margin: 0;
 }
+  */
 /* ==========================================================================
    NAV BLOCK
    ========================================================================== */
+/*
 .nav {
   display: flex;
   justify-content: space-between;
-  /*display: flex;
-  justify-content: space-between;
-  height: 80px;*/
 }
 .nav__logo {
   position: relative;
@@ -121,30 +125,17 @@
   top: 30px;
   width: 105px;
   height: 39px;
-  /*width: 58px;
-  height: 80px;
-  margin: 0;
-  padding: 0;*/
 }
-
 .nav__links {
   list-style-type: none;
   display: flex;
   gap: 20px;
   margin: 30px 80px 0 0;
   padding: 0;
-  /*margin-top: 30px;
-  margin-right: 80px;*/
-  /*display: flex;
-  list-style-type: none;
-  margin: 8px 0 0;
-  padding: 0;
-  gap: 20px;*/
 }
 .nav__links:nth-child(1) {
   margin-left: 20px;
 }
-
 .nav__link {
   text-decoration: none;
   font-family: "Inter";
@@ -154,9 +145,11 @@
   line-height: 20px;
   color: black;
 }
+  */
 /* ==========================================================================
   RECIPES BLOCK
    ========================================================================== */
+/*
 .recipes {
   background-image: url("../images/background_recipes.svg");
   background-repeat: no-repeat;
@@ -166,14 +159,6 @@
   color: #fff;
   display: flex;
   flex-direction: column;
-
-  /*display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  position: relative;*/
 }
 .recipes__title {
   max-width: 580px;
@@ -215,9 +200,11 @@
 .recipes__paragraph {
   margin: 0;
 }
+  */
 /* ==========================================================================
   RESERVATION BLOCK
    ========================================================================== */
+/*
 .reservation {
   background-image: url("../images/background_reservation.svg");
   background-repeat: no-repeat;
@@ -227,23 +214,8 @@
   display: flex;
   flex-direction: column;
   padding: 100px 0px 120px;
-
-  /*color: #fff;
-  display: flex;
-  flex-direction: column;
-  padding: 100px 0px 120px;*/
-
-  /*display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  position: relative;*/
 }
 .reservation__title {
-  /*display: flex;
-  justify-content: center;*/
   margin: 0px auto 80px;
   font-family: "Inter";
   font-style: normal;
@@ -254,6 +226,12 @@
 .reservation__form {
   margin: 0 auto 120px;
 }
+*/
+/* ==========================================================================
+  FORM BLOCK
+   ========================================================================== */
+/*
+
 .form {
   display: flex;
   justify-content: center;
@@ -276,9 +254,10 @@
   line-height: 20px;
 }
 
+
 .form__input {
-  box-sizing: border-box; /* garante que padding e borda sejam incluídos no cálculo da largura */
-  width: 100%; /* ocupa toda a largura disponível */
+  box-sizing: border-box;
+  width: 100%;
   height: 60px;
   margin: 8px 0 32px;
   padding: 15px 20px;
@@ -291,7 +270,7 @@
   line-height: 30px;
 }
 .form__input::placeholder {
-  color: #838383; /* cor desejada */
+  color: #838383;
 }
 .form__button-submit {
   height: 60px;
@@ -324,3 +303,4 @@
   height: 20px;
   width: 20px;
 }
+*/
